k8s/Gateway Api/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flask-route
  namespace: flask-app
spec:
  parentRefs:
  - name: api-gateway
    namespace: ns-gateway-api
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/v1
    backendRefs:
    - name: flask-app
      port: 80
